Apply linter and formater from eslint.
