# routes/genresRoutes.js
@@ -11,21 +11,22 @@ router.use('/', require('./swagger'))
 router.get('/genres', genresController.listAllGenres)
 
 // Routes to add a new user
-router.post('/genres', 
-    utilities.createUserRules(),
-    utilities.checkCreateUserData, 
-    genresController.insertAGenre
+router.post(
+  '/genres',
+  utilities.createUserRules(),
+  utilities.checkCreateUserData,
+  genresController.insertAGenre
 )
 
 // Route to update a user
-router.put('/genres/:id', 
-    utilities.createUserRules(),
-    utilities.checkCreateUserData, 
-    genresController.modifyAGenre
+router.put(
+  '/genres/:id',
+  utilities.createUserRules(),
+  utilities.checkCreateUserData,
+  genresController.modifyAGenre
 )
 
 // Route to delete a user
 router.delete('/genres/:id', genresController.removeAGenre)
-
 
 module.exports = router
